# PredictiveMaintenance

./: app.py  pyproject.toml
.streamlit/: config.toml
assets/css/: premium_theme.css
assets/sred_visuals/: version_history.json
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1743441401800.txt  Pasted--Note-This-is-a-demo-All-formats-download-as-CSV-data-with-appropriate-file-extension-Down-1741897528809.txt  Pasted-Based-on-my-review-of-the-project-materials-in-the-shared-folder-here-are-my-recommendations-to-ens-1741868028278.txt  Pasted-This-project-focuses-on-developing-an-AI-driven-platform-for-predictive-maintenance-in-smart-manufac-1741263018158.txt  Pasted-This-project-focuses-on-developing-an-AI-driven-platform-for-predictive-maintenance-in-smart-manufac-1741263060613.txt
components/: dashboard.py  downloads.py  equipment_monitoring.py  historical_analysis.py  maintenance_alerts.py  performance_metrics.py
models/: anomaly_detection.py  failure_prediction.py
replit_agent/: architecture.md
utils/: data_generator.py  data_processor.py  ui_helper.py  version_tracker.py  visualization_generator.py
