[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.0",
    "xlsxwriter>=3.2.2",
]
